# sbbf-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: bench.rs  parquet_impl.rs
src/: lib.rs
src/arch/: aarch64.rs  fallback.rs  mod.rs  wasm.rs  x86.rs  x86_64.rs
src/arch/fallback/: mod.rs  parquet2_impl.rs  parquet_impl.rs
tests/: mod.rs
