[package]
name = "sbbf-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Split block bloom filter implementation"
homepage = "https://github.com/ozgrakkurt/sbbf-rs"
repository = "https://github.com/ozgrakkurt/sbbf-rs"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]

[dependencies]
fastrange-rs = "0.0.4"
cpufeatures = "0.2"

[dev-dependencies]
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parquet2 = { version = "0.17", features = ["bloom_filter"] }
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
