[package]
name = "sbbf-rs"
version = "0.2.7"
edition = "2021"
license = "MIT"
description = "Split block bloom filter implementation"
homepage = "https://github.com/ozgrakkurt/sbbf-rs"
repository = "https://github.com/ozgrakkurt/sbbf-rs"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]

[dependencies]
fastrange-rs = "0.1"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parquet2 = { version = "0.17", default-features = false, features = ["bloom_filter"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[profile.release]
codegen-units = 1
lto = true
